--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
-    
+<header class="header">
+<logo class="logo">
+<img src="./assets/img/logo (1).png" alt="logo">    
+</logo>
+
+<button class="button__small button">Корзина</button>
+
+</header>    
+<main class="main">
+    <section class="section-1">
+    <h1>
+    Виртуальная <br>реальность <br>без проводов    
+    </h1>
+ <h2>Лучшее, что случалось с виртуальным миром в<br>
+     реальности. Новый компактный шлем без<br>
+     проводов и дорогих комьютеров.</h2>
+    <button class="button__big button">Купить</button></section>
+    <section class="section-2">
+    <img src="./assets/img/pic.jpg" alt="boy">
+</section>
+</main>
+<footer class="footer">
+    <a class="nav-link" href="#">Возможности</a>
+    <a class="nav-link" href="#">Где купить</a>
+    <a class="nav-link" href="#">Доставка</a>
+    <a class="nav-link" href="#">Помощь</a>
+</footer>
 </body>
 </html>
