--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>8 неделя</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <nav class="menu">
+        <ol>
+        <li class="menu__item"><a href="index.html">Перейти на домашнюю страницу</a></li>
+        <li class="menu__item"><a href="assets/pages/another-page.html" class="menu__link">Перейти на another-page.html</a></li>
+    </ol>
+    </nav>
+    <!-- another-page.html -->
+    <nav class="menu">
+    <ol>
+        <li class="menu__item"><a href="../../index.html">Перейти на домашнюю страницу</a></li>
+        <li class="menu__item"><a href="another-page.html" class="menu__link">Перейти на another-page.html</a></li>
+    </ol>
+    </nav> 
 <header class="header">
 <logo class="logo">
 <img src="./assets/img/logo (1).png" alt="logo">    
